manifests/platform/longhorn/config/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-b8m
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "longhorn.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
